// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter组件 快照测试 应该匹配有限制的状态快照 1`] = `
<div
  data-testid="counter"
>
  <div
    style="display: flex; align-items: center; gap: 16px;"
  >
    <button
      data-testid="decrement-button"
      style="padding: 8px 16px; margin: 0px 4px; border-radius: 4px; cursor: pointer; font-size: 16px; background-color: rgb(255, 107, 107);"
      type="button"
    >
      -
    </button>
    <span
      data-testid="count-display"
      style="font-size: 24px; font-weight: bold; min-width: 60px; text-align: center;"
    >
      5
    </span>
    <button
      data-testid="increment-button"
      style="padding: 8px 16px; margin: 0px 4px; border-radius: 4px; cursor: pointer; font-size: 16px; background-color: rgb(81, 207, 102);"
      type="button"
    >
      +
    </button>
    <button
      data-testid="reset-button"
      style="padding: 8px 16px; margin: 0px 4px; border-radius: 4px; cursor: pointer; font-size: 16px; background-color: rgb(116, 192, 252);"
      type="button"
    >
      重置
    </button>
  </div>
  <div
    style="margin-top: 8px; font-size: 14px; color: rgb(102, 102, 102);"
  >
    范围: 
    0
     ~ 
    10
  </div>
</div>
`;

exports[`Counter组件 快照测试 应该匹配默认状态的快照 1`] = `
<div
  data-testid="counter"
>
  <div
    style="display: flex; align-items: center; gap: 16px;"
  >
    <button
      data-testid="decrement-button"
      style="padding: 8px 16px; margin: 0px 4px; border-radius: 4px; cursor: pointer; font-size: 16px; background-color: rgb(255, 107, 107);"
      type="button"
    >
      -
    </button>
    <span
      data-testid="count-display"
      style="font-size: 24px; font-weight: bold; min-width: 60px; text-align: center;"
    >
      0
    </span>
    <button
      data-testid="increment-button"
      style="padding: 8px 16px; margin: 0px 4px; border-radius: 4px; cursor: pointer; font-size: 16px; background-color: rgb(81, 207, 102);"
      type="button"
    >
      +
    </button>
    <button
      data-testid="reset-button"
      style="padding: 8px 16px; margin: 0px 4px; border-radius: 4px; cursor: pointer; font-size: 16px; background-color: rgb(116, 192, 252);"
      type="button"
    >
      重置
    </button>
  </div>
</div>
`;
